--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,59 @@
   font-size: 22px;
   font-weight: 600;
 }
+
+.gmTextArea {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+.gmMessage {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.msgInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px;
+}
+
+.msgAvatar {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: #e0e0e0 1px solid;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.msgBody {
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+}
+
+.msgAddress {
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+.msg {
+  border: #e0e0e0 1px solid;
+  height: 100%;
+  padding: 8px;
+}
+
+.msgTime {
+  margin-top: 5px;
+  font-size: 12px;
+  color: rgba(117, 115, 115, 0.842);
+}
