--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,11 @@
   font-size: 12px;
   color: rgba(117, 115, 115, 0.842);
 }
+
+.status {
+  color: #8d0707;
+  text-align: center;
+  padding: 0 10px;
+  margin-top: 10px;
+  font: 16px sans-serif;
+}
