--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,9 @@
   display: flex;
   flex-direction: row;
   margin-top: 20px;
+  border-bottom: 1px solid #2b2b2b;
+  width: 550px;
+  justify-content: center;
 }
 
 .msgInfo {
@@ -78,6 +81,7 @@
   justify-content: flex-start;
   align-items: center;
   padding: 8px;
+  width: 100px;
 }
 
 .msgAvatar {
@@ -106,6 +110,7 @@
   border: #e0e0e0 1px solid;
   height: 100%;
   padding: 8px;
+  width: 380px;
 }
 
 .msgTime {
